--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             position: relative;
             overflow: hidden;
             background: #ececec;
+            visibility: hidden;
         }
     </style>
     <body>
