--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
         <section>
             <div class="grid-12 project project-left">
                 <div class="box">
-                    <img src="img/image1.jpg" alt="" />
-                    <div class="overlay"></div>
+                    <img src="img/image1.jpg" alt="" class="img1"/>
+                    <div class="overlay lay1"></div>
                 </div>
 
-                <div class="project-info">
+                <div class="project-info first">
                     <p class="small-title">Identity // Elegan // Woman</p>
                     <div class="hidden">
                         <h4 class="sub-title">this woman is very beautiful</h4>
@@ -50,15 +50,28 @@
                     <a href="#" class="project-link">See learn </a>
                 </div>
             </div>
+            <div class="grid-12 project project-right">
+                <div class="box">
+                    <img src="/img/image2.jpg" alt="" class="img2"/>
+                    <div class="overlay lay2"></div>
+                </div>
+
+                <div class="project-info right second">
+                    <p class="small-title">Identity // Elegan // Woman</p>
+                    <div class="hidden">
+                        <h4 class="sub-title">this Street very cool</h4>
+                    </div>
+                    <a href="#" class="project-link">See learn </a>
+                </div>
+            </div>
+            <footer>
+                <p>Create by ❤ Marineux 2021</p>
+            </footer>
         </section>
 
-        <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-        <script>
-            window.jQuery ||
-                document.write(
-                    '<script src="js/vendor/jquery-1.11.2.min.js"><\/script>'
-                );
-        </script>
+
+
+
         <script
             src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/gsap.min.js"
             integrity="sha512-H6cPm97FAsgIKmlBA4s774vqoN24V5gSQL4yBTDOY2su2DeXZVhQPxFK4P6GPdnZqM9fg1G3cMv5wD7e6cFLZQ=="
@@ -70,7 +83,7 @@
         <script src="js/main.js"></script>
 
         <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-        <script>
+        <!-- <script>
             (function (b, o, i, l, e, r) {
                 b.GoogleAnalyticsObject = l;
                 b[l] ||
@@ -85,6 +98,6 @@
             })(window, document, "script", "ga");
             ga("create", "UA-XXXXX-X", "auto");
             ga("send", "pageview");
-        </script>
+        </script> -->
     </body>
 </html>
